--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-This provides comparative benchmarks of Roda, Rails, and Sinatra at
-10, 100, 1000, and 10,000 routes.
+This provides comparative benchmarks of Roda, Cuba, Rails, and Sinatra with
+10, 100, 1000, and 10,000 routes. It also benchmarks Roda with the multi_route
+plugin and multiple Roda apps using run to dispatch.
 
 To use:
 
@@ -7,6 +8,14 @@ To use:
 
 Note that rake bench can take quite a long time, especially on slower hardware.
 
-The graphs task requires gruff to create the graphs.  You can skip this step if
-you want, and just look at the underlying .csv files produced by the bench
-task.
+If you only want to benchmark specific apps, set the R10K_APPS environment
+variable:
+
+  rake bench graphs R10K_APPS="roda cuba"
+
+The builders directory contains the files that build the applications.
+If you want to examine the application files used for benchmarking, you can
+use the build task and then look in the apps directory.  The bench task
+produces CSV files which are stored in the data directory.  The graphs
+task takes those CSV files and turns them into nice looking graphs (using
+gruff).
