Add support for the syro router

--- a/README.rdoc
+++ b/README.rdoc
@@ -9,6 +9,7 @@ nyny :: NYNY (https://github.com/alisnic/nyny)
 rails :: Ruby on Rails (http://rubyonrails.org/)
 roda :: Roda (http://roda.jeremyevans.net)
 sinatra :: Sinatra (http://www.sinatrarb.com/) 
+syro : Syro (http://soveran.github.io/syro/)
 synfeld :: Synfeld (https://github.com/swerling/synfeld)
 
 These frameworks are designed to be run with the default settings.
