--- a/README.rdoc
+++ b/README.rdoc
@@ -13,6 +13,7 @@ roda :: Roda (http://roda.jeremyevans.net)
 sinatra :: Sinatra (http://www.sinatrarb.com/)
 syro :: Syro (http://soveran.github.io/syro/)
 synfeld :: Synfeld (https://github.com/swerling/synfeld)
+watts :: Watts (https://github.com/pete/watts)
 
 These frameworks are designed to be run with the default settings.
 There are some variants that can be run with non-default settings:
