Add a roda-hash-routes builder for testing roda with the hash-routes option

--- a/README.rdoc
+++ b/README.rdoc
@@ -20,6 +20,7 @@ There are some variants that can be run with non-default settings:
 
 static-route :: A basic static routing implementation, for maximum performance
 rails-minimal-middleware :: Rails, with most middleware removed
+roda-hash-routes:: Roda, using the hash_routes plugins
 roda-multi-route :: Roda, using the multi_route plugin
 roda-osm :: Roda, using optimized_string_matchers plugin
 roda-run :: Roda, using separate Roda applications per branch
