--- a/README.rdoc
+++ b/README.rdoc
@@ -19,6 +19,7 @@ These frameworks are designed to be run with the default settings.
 There are some variants that can be run with non-default settings:
 
 static-route :: A basic static routing implementation, for maximum performance
+hanami-api :: Hanami, using hanami-api gem
 rails-minimal-middleware :: Rails, with most middleware removed
 roda-hash-routes:: Roda, using the hash_routes plugins
 roda-multi-route :: Roda, using the multi_route plugin
