--- a/README.rdoc
+++ b/README.rdoc
@@ -34,7 +34,7 @@ After cloning the repository, install the related gems:
 
   gem install gruff # if you want to create the graphs
   gem install rails roda cuba # frameworks to test
-  gem install hanami-controller hanami-router --pre
+  gem install hanami-controller hanami-router
 
 A Gemfile is not used, because all web frameworks are tested independently,
 and with a Gemfile, bundler assumes all gems must be able to work together.
