Use plain_hash_response_headers plugin in roda-osm benchmark

--- a/README.rdoc
+++ b/README.rdoc
@@ -16,7 +16,8 @@ These frameworks are designed to be run with the default settings.
 There are some variants that can be run with non-default settings:
 
 roda-hash-routes:: Roda, using the hash_routes plugins
-roda-osm :: Roda, using optimized_string_matchers and optimized_segment_matchers plugins
+roda-osm :: Roda, using optimized_string_matchers, optimized_segment_matchers,
+            and plain_hash_response_headers plugins
 hanami-api :: Hanami, using hanami-api gem
 
 The frameworks that are tested by default are those with more than 250,000
